<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.jiaxiaotong.activity.ChangePasswordActivity">
    <include layout="@layout/title_bar"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_white"
        android:divider="#808080"
        android:dividerHeight="1px"
        android:visibility="gone"
        android:id="@+id/change_password_listview"></ListView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_password_input_oldpassword_tv"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/edit_view_white_bg"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/input_old_password"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_password_input_newpassword_tv"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/edit_view_white_bg"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/input_new_password"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_password_sure_password_tv"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/edit_view_white_bg"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/input_sure_password"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sure"
        android:gravity="center"
        android:background="#b7d455"
        android:textSize="16sp"
        android:padding="10dp"
        android:id="@+id/change_password_next_btn"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/app_white"
        />

</LinearLayout>
