<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="bottom">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_radius_bg"
            android:textColor="@color/text_yellow"
            android:text="@string/take_photo"
            android:textSize="18sp"
            android:id="@+id/layout_take_photo_btn"
            android:layout_gravity="center_horizontal|bottom" />
        <Button
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_yellow"
            android:background="@drawable/white_radius_bg"
            android:text="@string/get_photo"
            android:textSize="18sp"
            android:id="@+id/layout_get_photo_btn"
            android:layout_gravity="center_horizontal|bottom" />
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_radius_bg"
            android:text="@string/cancle"
            android:textSize="18sp"
            android:id="@+id/layout_cancle_btn"
            android:layout_gravity="center_horizontal|bottom" />
    </LinearLayout>


</FrameLayout>