<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.jiaxiaotong.activity.ChangeTelActivity"
    android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_tel_input_tel_tv"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/edit_view_white_bg"
        android:layout_marginTop="10dp"
        android:hint="@string/input_tel"
         />
    <RelativeLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/get_code"
            android:gravity="center"
            android:background="#b7d455"
            android:textSize="16sp"
            android:id="@+id/change_tel_get_code_tv"
            android:textColor="@color/app_white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_view_white_bg"
            android:id="@+id/change_tel_code_et"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:hint="@string/auth_code"
            android:layout_toLeftOf="@+id/change_tel_get_code_tv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/next"
        android:gravity="center"
        android:background="#b7d455"
        android:textSize="16sp"
        android:padding="10dp"
        android:id="@+id/change_tel_next_btn"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/app_white"
         />
</LinearLayout>
