<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    tools:context="com.app.jiaxiaotong.fragment.ApplicationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/title_yellow"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/application_center_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/application_center"
            android:textColor="@color/bottom_text_color_normal"
            android:textSize="22sp" />


        <ImageView
            android:id="@+id/iv_new_contact"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/common_tab_bg"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@mipmap/add"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_radius_bg"
        android:id="@+id/application_checking_in_layout"
        android:layout_margin="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/application_ccenter_icon1"
            android:id="@+id/imageView2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checking_in"
            android:layout_alignTop="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:id="@+id/textView2" />
        <TextView
            android:id="@+id/application_checking_in_desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checking_in_desc"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />
        <ImageView
            android:id="@+id/application_checking_in_unread_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/unread_dot"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/application_consume_layout"
        android:background="@drawable/white_radius_bg"
        android:visibility="gone"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/application_ccenter_icon2"
            android:id="@+id/imageView3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consume"
            android:layout_alignTop="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:id="@+id/textView3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consume_desc"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_radius_bg"
        android:id="@+id/application_class_notice_layout"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/application_ccenter_icon3"
            android:id="@+id/imageView4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_notice"
            android:layout_alignTop="@+id/imageView4"
            android:layout_toRightOf="@+id/imageView4"
            android:layout_toEndOf="@+id/imageView4"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:id="@+id/textView4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_notice_desc"
            android:id="@+id/application_class_notice_desc_tv"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />
        <ImageView
            android:id="@+id/application_class_notice_unread_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/unread_dot"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>
