<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.jiaxiaotong.activity.ResetPasswordActivity">
    <include layout="@layout/title_bar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/app_white"
        android:padding="10dp"
        android:id="@+id/forget_password_activity_user_name_et"
        android:hint="@string/tel_num"
        android:layout_gravity="center_horizontal" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/app_white"
        android:layout_marginRight="20dp">
        <EditText
            android:background="@color/app_white"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_toLeftOf="@+id/forget_password_activity_password_visibility_iv"
            android:id="@+id/forget_password_activity_password_et"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/pw_invisibility_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/forget_password_activity_password_visibility_iv"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/get_code"
            android:gravity="center"
            android:background="#b7d455"
            android:textSize="16sp"
            android:id="@+id/forget_password_activity_get_code_tv"
            android:textColor="@color/app_white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_white"
            android:id="@+id/forget_password_activity_code_et"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:hint="@string/auth_code"
            android:layout_toLeftOf="@+id/forget_password_activity_get_code_tv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <Button
        android:id="@+id/forget_password_activity_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/login_btn_bg"
        android:textColor="@color/app_white"
        android:textSize="16sp"
        />

</LinearLayout>
