<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.jiaxiaotong.activity.LoginActivity">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/title_yellow"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_title_tv"
            android:text="@string/login"
            android:textSize="22sp"
            android:textColor="@color/app_white"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/title_right_sure_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:text="保存"
            android:visibility="gone"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textColor="@color/app_white"/>
    </FrameLayout>

    <EditText
        android:id="@+id/login_activity_login_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/input_bar_select_bg"
        android:drawableLeft="@mipmap/defauit_icon_account_nor"
        android:imeOptions="actionNext"
        android:layout_marginTop="30dp"
        android:drawablePadding="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:hint="@string/tel_num" />
    <EditText
        android:id="@+id/login_activity_password_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="8dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:background="@drawable/input_bar_select_bg"
        android:drawableLeft="@mipmap/defauit_icon_password_nor"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:hint="@string/password_hint" />
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/login_activity_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/app_white"
        android:background="@drawable/login_btn_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/login_activity_forget_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9cbd2b"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"
        android:text="@string/forget_password"/>
</LinearLayout>
